5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1602_1016.log
== TEST (2019-04-01 16:44:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
a=(s*(s-a)*(s-b)*(s-c))**0,5

print(round(a,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(a,5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:44:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
a=(s*(s-a)*(s-b)*(s-c))**0,5

print(round(d,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(d,5))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:44:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
d=(s*(s-a)*(s-b)*(s-c))**0,5

print(round(d,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(d,5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:45:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
x=sqrt((s*(s-a)*(s-b)*(s-c)))

print(round(x, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x=sqrt((s*(s-a)*(s-b)*(s-c)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:46:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
x=sqrt((s*(s-a)*(s-b)*(s-c)))

print(round(x, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:46:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a=float(input("entre com um lado do triangulo:"))
b=float(input("entre com um segundo lado do triangulo:"))
c=float(input("entre com um terceiro lado do triangulo:"))

s=(a+b+c)/2
x=sqrt((s*(s-a)*(s-b)*(s-c)))

print(round(x, 5))
-- EXECUTION TIME:
0.150618
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
